# chatgpt

./: .env  .readme.md  .replit  .replit.deploy  Dockerfile_bot  Procfile  README.md  README_STARTUP.md  README_db.md  app.py  auto_restart.py  backup.py  bot_launcher.py  bot_start.py  check_and_run_bot.py  check_token.py  check_token_status.py  config.py  daily_report.py  db_init.py  db_operations.py  deploy.py  deployment_start.py  diagnose_start_command.py  direct_api_bot.py  enhanced_bot.py  fix_bot_token.py  fix_start_command.py  fixed_bot.py  init_sample_data.py  keyboards.py  main.py  main_db.py  minimal_test_bot.py  pyproject.toml  requirements.txt  reset_db.py  restart_workflows.py  run_bot.py  run_bot_command.txt  (+41 more)
attached_assets/: Pasted-import-logging-import-asyncio-from-aiogram-import-Bot-Dispatcher-types-from-aiogram-filters-import-1741746593166.txt  Pasted-import-logging-import-asyncio-from-aiogram-import-Bot-Dispatcher-types-from-aiogram-filters-import-1741747337845.txt  Pasted-import-logging-import-asyncio-from-aiogram-import-Bot-Dispatcher-types-from-aiogram-filters-import-1741747953689.txt  Pasted-import-logging-import-sqlite3-import-asyncio-from-aiogram-import-Bot-Dispatcher-types-from-aiogram-1741749776362.txt  Pasted-import-logging-import-sqlite3-import-asyncio-from-aiogram-import-Bot-Dispatcher-types-from-aiogram-1741750647395.txt  Pasted-import-sqlite3-db-sqlite-conn-sqlite3-co-1741749816150.txt  АТТ с датами.xlsx
backups/: vehicles_backup_20250312_150500.db  vehicles_backup_20250313_185123.db
deploy_project/: README.md  app.py  config.py  (+5 more)
(+7 files in other folders)
